--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Medical Tourism",
+  "name": "medical",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "postbuild": "netlify-plugin-nextjs",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.11.4",
     "@tailwindcss/postcss": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
